# asterisk-ari-c

./: CMakeLists.txt  CMakeUserPresets.json  README.md
include/: client.h  errors.h  httpclient.h  websocket.h
include/aricpp/detail/: newboostasiolib.h
src/: ari_test.cpp  hold_call.cpp  holding_bridge.cpp  main.cpp  query.cpp
